Fixed spacing between things

--- a/src/components/Creations.module.css
+++ b/src/components/Creations.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
 
     margin-top: 1em;
